app/src/styles/Storage.less
.storage-first-pool {
  margin: 15px auto 25px;
  max-width: 550px;
  overflow: hidden;
  color: #626262;

  & > img {
    height: 130px;
    margin: 15px;
    float: left;
  }
}

.volume {
  // Based on TWBS .panel
  margin     : 25px;
  overflow   : hidden;
  box-shadow : 0 2px 16px -2px rgba(0, 0, 0, 0.15);
  .transition( all 0.25S );

  .progress {
    margin        : @panel-body-padding -@panel-body-padding 0;
    border-radius : 0;
    height        : 10px;
    .transition( all 0.6s );
  }

  .progress-bar {
    min-width   : 0;
    line-height : 10px;
    color       : transparent;
    overflow    : hidden;
    text-align  : left;
    & > span {
      margin: 0 @panel-body-padding;
    }
    .transition( all 0.6s );
  }

  .panel-body:hover,
  &.editing {
    .progress {
      height: 25px;
    }

    .progress-bar {
      line-height : 25px;
      color       : #121212;
    }
    .free-space {
      background: none;
      box-shadow: none;
    }
  }


  &.awaiting-init {
    background-color : #fbfbfb;
    margin           : 0 25px;
    box-shadow       : none;
  }

  .disk-wrapper {
    position: relative;
    float: left;
    width: 6em;
  }
}

nav.volume-nav {
  text-align       : center;
  height           : 44px; // FIXME: Nav pills cause whitespace gap
  border-bottom    : 1px solid @gray-lighter;
  padding          : 8px 0;
  margin           : 0 -@panel-body-padding @panel-body-padding;
  background-color : rgba(0, 0, 0, 0.05);
  .nav {
    display: inline-block;
    & > li > a {
      padding: 4px 16px;
    }
  }

  .nav-pills > li.active > a,
  .nav-pills > li.active > a:hover,
  .nav-pills > li.active > a:focus {
    color            : darken( @brand-primary, 10% );
    background-color : fade( @brand-primary, 20% );
  }
}

.volume-name-input {
  .pull-left();
  width: 20%;
}

.volume-info {
  #gradient > .directional( lighten( @freenas-gray, 5% )
                          , @freenas-gray
                          , @golden-angle
                          );
  background-color : @freenas-gray;
  color            : white;
  padding          : @panel-body-padding;
  margin           : -@panel-body-padding;
}

.volume-name,
.volume-name-input,
.volume-capacity {
  margin: 0;
  line-height: 40px;
}

.volume-name {
  font-size: 25px;
}

.volume-name-input {
  min-width: 260px;
  width: 30%;

  .form-group {
    margin-bottom: 0;
  }
  .form-control {
    font-size: 25px;
    height: 40px;
    margin: 0;
  }
}

.volume-capacity {
  font-size: 30px;
  font-weight: 100;
}

.pool-topology-section {
  min-height: 100px;
}

.volume-drawer {
  margin: ( @panel-body-padding + 10px ) 0;
}

.pool-topology-header {
  text-transform: uppercase;
  font-size: 13px;
  font-weight: 600;
  color: #AAAAAA;
}

.pool-vdev-message {
  .text-muted();
  font-style  : italic;
  font-size   : 14px;
  font-weight : 100;
  margin      : @panel-body-padding 0;
}

.vdev-bucket {
  padding: 9px;

  .toolbar {
    margin: -9px -9px 5px -9px;
    padding: 5px 10px;
    border-bottom: inherit;
    background-color: rgba(0, 0, 0, 0.05);
  }

  .vdev-type {
    color: #555;

    &.btn {
      padding: 2px 4px;
      border: none;
      background: none;

      &:active {
        background-color: rgba(0, 0, 0, 0.075);
      }
    }
  }

  .open .vdev-type {
    color: @brand-primary;
  box-shadow: none;
  }
}

.disk-icon {
  text-align: center;
  margin: 0.25em;
  position: relative;

  & > img {
    width: 3.5em;
  }

  .primary-text {
    display: block;
  }
  .secondary-text {
    display: block;
    font-size: 0.8em
  }

  &.temp-overheat {
    background-color: red;
  }

  &.temp-warn {
    background-color: yellow;
  }

  &:before {
    content: "";
    position: absolute;
    left: 50%;
    margin-left: -2.5em;
    top: 0.2em;
    height: 0.75em;
    width: 0.75em;
    border-radius: 50%;
  }

  &.smart-pass:before {
    background: @brand-success;
  }

  &.smart-warn:before {
    background: orange;
  }

  &.smart-fail:before {
    background: red;
  }

}
.disk-remove {
  height        : 15px;
  width         : 15px;
  line-height   : 15px;
  display       : block;
  position      : absolute;
  right         : 0;
  top           : 0;
  color         : @gray-light;
  border-radius : 50%;
  font-size     : 12px;
  text-align    : center;
  font-style    : normal;
  font-weight   : 100;
  .transition( all 0.25s );
  z-index: 1;

  &:hover {
    color: white;
    background-color: @brand-danger;
    border-color: @brand-danger;
  }
}

.dragging .disk-remove {
  .transition( none );
  display: none;
}

.context-disks {
  .disk-container {
    .flex-display( flex );
    .flex-flow( row wrap );
    .justify-content( space-around );

    .disk-wrapper {
      margin: 0.25em
    }
  }
}

